feat: Added back Apache Bookkeeper as legacy driver, ref: NOISSUE